--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
         "svg4everybody": "~2.0",
         "tablesaw": "~2.0.2",
         "typed.js": "1.1.1",
+        "xss-filters": "1.2.7",
 
         "breakpoint-sass": "~2.6",
         "modularscale-sass": "~2.1",
