--- a/config/services/security.yaml
+++ b/config/services/security.yaml
@@ -36,6 +36,14 @@ services:
         arguments: ['@doctrine.em']
 
     ####################################################################################################################
+    # forms
+    ####################################################################################################################
+
+    csrf:
+        class: 'Hal\UI\Security\CSRFManager'
+        arguments: ['@clock']
+
+    ####################################################################################################################
     # crypto
     ####################################################################################################################
 
