--- a/config/ui/middleware.yaml
+++ b/config/ui/middleware.yaml
@@ -1,7 +1,7 @@
 services:
 
     ####################################################################################################################
-    # PERMISSIONS
+    # permissions
     ####################################################################################################################
 
     middleware.signed_in:
@@ -34,7 +34,15 @@ services:
         calls: [['setTemplate', ['denied.twig']]]
 
     ####################################################################################################################
-    # ENTITY LOADING
+    # forms loading
+    ####################################################################################################################
+
+    middleware.require_csrf:
+        class: 'Hal\UI\Middleware\CSRFMiddleware'
+        arguments: ['@csrf']
+
+    ####################################################################################################################
+    # entity loading
     ####################################################################################################################
 
     middleware.require_entity:
@@ -46,7 +54,7 @@ services:
         arguments: ['@notFoundHandler']
 
     ####################################################################################################################
-    # REMOVALS
+    # entity removals
     ####################################################################################################################
 
     middleware.removal_confirmation.twig:
